@@ -7,7 +7,8 @@ New features:
 - Redland graphs can now use a MySQL backend.
 Bug fixes:
 ~~~~~~~~~~
--
+- Serializations presented rdf binding twice if it was given in serialization
+  bindings.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
